Update schedule.md